KARAF-7871: Add Java 23 support at runtime